--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,9 +6,8 @@
       "info-card#button-left",
       "shelf",
       "slider-layout#home",
-      "responsive-layout",
       "responsive-layout.desktop#desktop",
-      "rich-text#mobile"
+      "responsive-layout.mobile#mobile"
     ]
   },
   "info-card#button-right": {
