--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -92,11 +92,11 @@
           "font": "t-heading-3"
       }
   },
-  "rich-text#home2": {
-      "props": {
-          "text": "Electronics",
-          "textPosition": "CENTER",
-          "font": "t-heading-3"
-      }
-  }
+  "iframe": {
+    "props": {
+        "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+        "width": 800,
+        "height": 1000
+    }
+}
 }
