--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,8 @@
   "store.custom#about-us": {
       "blocks": [
           "flex-layout.row#about-us",
-          "tab-layout#home"
+          "tab-layout#home",
+          "iframe"
       ]
   },
   "flex-layout.row#about-us": {
@@ -94,9 +95,6 @@
   },
   "iframe": {
       "props": {
-          "text": "Instagram",
-          "textPosition": "CENTER",
-          "font": "t-heading-3",
           "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
             "width": 800,
             "height": 1000
