--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -80,7 +80,7 @@
   },
   "tab-content.item#home2": {
       "children": [
-          "rich-text#home2"
+        "iframe"
       ],
       "props": {
           "tabId": "electronics"
