--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -83,7 +83,7 @@
         "iframe"
       ],
       "props": {
-          "tabId": "electronics"
+          "tabId": "Instagram"
       }
   },
   "rich-text#home1": {
