--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -82,7 +82,7 @@
 
   "rich-text#header": {
       "props": {
-          "text": "**Free Shipping on orders over $50**",
+          "text": "*Free Shipping on orders over $50**",
           "textPosition": "CENTER"
       }
   }
