--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -15,7 +15,8 @@
   "header-layout.desktop": {
       "children": [
           "header-row#notification",
-          "header-row#main"
+          "header-row#main",
+          "header-row#menu"
       ]
   },
   "header-layout.mobile": {
@@ -84,6 +85,13 @@
       "props": {
           "text": "**Free Shipping on orders over $50**",
           "textPosition": "CENTER"
-      }
-  }
+        }
+    },
+    "header-row#menu": {
+        "children": [
+            "header-spacer",
+            "vtex.menu@2.x:menu#categories",
+            "header-spacer"
+        ]
+    }
 }
