--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -51,6 +51,7 @@
 
   "header-row#main-mobile": {
       "children": [
+          "drawer",
           "logo",
           "header-spacer",
           "minicart",
